--- a/style/style.css
+++ b/style/style.css
@@ -56,4 +56,10 @@ nav ul li :hover {
 }
 nav a {
   color: white;
+}
+
+header {
+  background-image: url("../assets/pexels-timesaverhacks-2724749 1.png");
+  height: 100vh;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
