--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +19,6 @@ nav {
   height: 100px;
   width: 100%;
   background-color: transparent;
-  border: 1px solid red;
   z-index: 2;
   position: fixed;
 }
@@ -59,7 +57,99 @@ nav a {
 }
 
 header {
-  background-image: url("../assets/pexels-timesaverhacks-2724749 1.png");
+  background: url("../assets/header-image.png") no-repeat;
+  background-size: cover;
   height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+}
+header .header-content {
+  background-color: rgba(18, 11, 11, 0.4470588235);
+  height: 100vh;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Josefin Sans", sans-serif;
+}
+header .header-content h1 {
+  margin-top: 10%;
+  font-size: 80px;
+  width: 50vw;
+  margin-left: 92%;
+  font-weight: 500;
+  margin-bottom: 2%;
+}
+header .header-content p {
+  font-size: 28px;
+  margin-left: 55%;
+  width: 35vw;
+}
+header .header-content .btns-header {
+  margin-top: 25%;
+  width: 70%;
+  margin-left: 26%;
+}
+header .header-content .btns-header button {
+  width: 250px;
+  height: 70px;
+  border: none;
+  background-color: #F0C7C2;
+  font-size: 24px;
+  font-weight: bold;
+  margin-left: 2%;
+}
+header .header-content .btns-header button a {
+  color: #3C3C3C;
+}
+header .header-content .btns-header button:last-child {
+  border: 3px solid #F0C7C2;
+  background-color: transparent;
+}
+header .header-content .btns-header button:last-child a {
+  color: white;
+}
+
+.sobre-nos {
+  background: url("../assets/Frame 1 (2).png") no-repeat;
+  background-size: cover;
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sobre-nos h2 {
+  color: white;
+  font-size: 56px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+  margin-bottom: 2%;
+}
+.sobre-nos h2 span {
+  color: #F0C7C2;
+}
+.sobre-nos .sobre-nos-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  width: 70%;
+  color: white;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 22px;
+}
+.sobre-nos .sobre-nos-content .sobre-text {
+  width: 60%;
+}
+.sobre-nos .sobre-nos-content .sobre-text p {
+  margin-right: 6%;
+  margin-top: 2.5%;
 }/*# sourceMappingURL=style.css.map */
