--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,5 @@
 @import "./variaveis.scss";
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -15,7 +14,6 @@ nav{
     @include felxCenter(row, center, baseline);
     @include heigWid(100px, 100%);
     background-color: transparent;
-    border: 1px solid red;
     z-index: 2;
     position: fixed;
     img{
@@ -51,6 +49,85 @@ nav{
 
 //--------HEADER--------
 header{
-    background-image: url("../assets/pexels-timesaverhacks-2724749\ 1.png");
+    background: url("../assets/header-image.png") no-repeat;
+    background-size: cover;
     @include heigWid(100vh, 100%);
+    @include felxCenter(column, baseline, center);
+    .header-content{
+        background-color: #120b0b72;
+        @include heigWid(100vh, 40%);
+        @include felxCenter(column, center, center);
+        color: white;
+        font-family: "Josefin Sans", sans-serif;
+        h1{
+            margin-top: 10%;
+            font-size: 80px;
+            width: 50vw;
+            margin-left: 92%;
+            font-weight: 500;
+            margin-bottom: 2%;
+        }
+        p{
+            font-size: 28px;
+            margin-left: 55%;
+            width: 35vw;
+        }
+        .btns-header{
+            margin-top: 25%;
+            width: 70%;
+            margin-left: 26%;
+            button{
+                width: 250px;
+                height: 70px;
+                border: none;
+                background-color: #F0C7C2;
+                font-size: 24px;
+                font-weight: bold;
+                margin-left: 2%;
+                a{
+                    color: #3C3C3C;
+                }
+            }
+            button:last-child{
+                border: 3px solid #F0C7C2;
+                background-color: transparent;
+                a{
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
+//--------SOBRE-NOS--------
+.sobre-nos{
+    background: url("../assets/Frame\ 1\ \(2\).png") no-repeat;
+    background-size: cover;
+    @include heigWid(80%, 100%);
+    @include felxCenter(column, center, center);
+    h2{
+        color: white;
+        font-size: 56px;
+        font-family: "Josefin Sans", sans-serif;
+        font-weight: 600;
+        margin-bottom: 2%;
+        span{
+            color: #F0C7C2;
+        }
+    }
+    .sobre-nos-content{
+        @include felxCenter(row, center, center);
+        @include heigWid(60%, 70%);
+        color: white;
+        font-family: "Josefin Sans", sans-serif;
+        font-size: 22px;
+        .sobre-text{
+            width: 60%;
+            p{
+                margin-right: 6%;
+                margin-top: 2.5%;
+            }
+        }
+        
+    }
 }
