--- a/style/style.css
+++ b/style/style.css
@@ -152,4 +152,69 @@ header .header-content .btns-header button:last-child a {
 .sobre-nos .sobre-nos-content .sobre-text p {
   margin-right: 6%;
   margin-top: 2.5%;
+}
+
+.nos-escolher {
+  background: url("../assets/Frame 1 (3).png") no-repeat;
+  background-size: cover;
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.nos-escolher .video-nos-escolher {
+  width: 50%;
+}
+.nos-escolher .video-nos-escolher img {
+  margin-left: 12%;
+  width: 650px;
+}
+.nos-escolher .nos-escolher-content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 5%;
+}
+.nos-escolher .nos-escolher-content h2 {
+  color: white;
+  font-size: 64px;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 600;
+  margin-bottom: 2%;
+}
+.nos-escolher .nos-escolher-content h2 span {
+  color: #F0C7C2;
+}
+.nos-escolher .carousel-container {
+  width: 60%;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid red;
+}
+.nos-escolher .carousel-container .carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  color: white;
+}
+.nos-escolher .carousel-container .carousel-item {
+  min-width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
+  text-align: center;
+}
+.nos-escolher .carousel-container .prev, .nos-escolher .carousel-container .next {
+  top: 50%;
+  position: absolute;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.nos-escolher .carousel-container .prev {
+  left: 5%;
+}
+.nos-escolher .carousel-container .next {
+  right: 5%;
 }/*# sourceMappingURL=style.css.map */
