--- a/style/style.scss
+++ b/style/style.scss
@@ -131,3 +131,63 @@ header{
         
     }
 }
+
+//--------NOS ESCOLHER--------
+.nos-escolher{
+    background: url("../assets/Frame\ 1\ \(3\).png") no-repeat;
+    background-size: cover;
+    @include heigWid(80%, 100%);
+    @include felxCenter(row, center, center);
+    .video-nos-escolher{
+        width: 50%;
+        img{
+            margin-left: 12%;
+            width: 650px;
+        }
+    }
+    .nos-escolher-content{
+        width: 50%;
+        @include felxCenter(column, center, center);
+        margin-right: 5%;
+        h2{
+            color: white;
+            font-size: 64px;
+            font-family: "Josefin Sans", sans-serif;
+            font-weight: 600;
+            margin-bottom: 2%;
+            span{
+                color: #F0C7C2;
+            }
+        }
+    }
+    .carousel-container{
+        width: 60%;
+        position: relative;
+        overflow: hidden;
+        border: 1px solid red;
+        .carousel {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+            color: white;
+        }
+        .carousel-item {
+            min-width: 100%;
+            box-sizing: border-box;
+            padding: 20px;
+            text-align: center;
+        }
+        .prev, .next {
+            top: 50%;
+            position: absolute;
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
+        .prev {
+            left: 5%;
+        }
+        
+        .next {
+            right: 5%;
+        }
+    }
+}
