--- a/style/style.scss
+++ b/style/style.scss
@@ -132,7 +132,7 @@ header{
     }
 }
 
-//--------NOS ESCOLHER--------
+//--------NOS-ESCOLHER--------
 .nos-escolher{
     background: url("../assets/Frame\ 1\ \(3\).png") no-repeat;
     background-size: cover;
@@ -164,7 +164,8 @@ header{
         width: 60%;
         position: relative;
         overflow: hidden;
-        border: 1px solid red;
+        margin-right: 5%;
+        margin-top: 5%;
         .carousel {
             display: flex;
             transition: transform 0.5s ease-in-out;
@@ -175,12 +176,46 @@ header{
             box-sizing: border-box;
             padding: 20px;
             text-align: center;
+            @include felxCenter(column, center, center);
+            .icon{
+              border: 3px solid #F0C7C2;
+              text-align: center;
+              @include felxCenter(column, center, center);
+              @include heigWid(80px, 80px);
+              border-radius: 50%;
+              font-size: 32px;
+              margin-bottom: 2%;
+            }
+            h3{
+                color: #F0C7C2;
+                font-size: 32px;
+                width: 50%;
+                font-family: "Josefin Sans", sans-serif;
+                font-weight: 600;
+                margin-bottom: 2%;
+            }
+            p{
+                font-size: 18px;
+                width: 70%;
+                font-family: "Josefin Sans", sans-serif;
+                font-weight: 500;
+            }
         }
         .prev, .next {
             top: 50%;
             position: absolute;
             transform: translateY(-50%);
             cursor: pointer;
+            border: 3px solid #F0C7C2;
+            background-color: transparent;
+            color: #F0C7C2;
+            @include heigWid(30px, 30px);
+            font-weight: 900;
+            border-radius: 50%;
+        }
+        .prev:hover, .next:hover {
+            transform: scale(1.00);
+            transition: 0.5s;
         }
         .prev {
             left: 5%;
@@ -190,4 +225,50 @@ header{
             right: 5%;
         }
     }
+}
+//--------PROJETOS--------
+.container-projetos{
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+    
+    .interactive-div {
+        flex: 1;
+        background-size: cover;
+        background-position: center;
+        transition: flex 0.5s ease;
+        position: relative;
+        cursor: pointer;
+        .content {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            color: white;
+            text-shadow: 1px 1px 2px black;
+            @include felxCenter(row, center, center)
+        }
+        
+        img {
+            width: 100px;
+            height: 100px;
+            opacity: 0.5;
+        }
+        h3{
+            color: #F0C7C2;
+            font-size: 36px;
+            font-family: "Josefin Sans", sans-serif;
+            font-weight: 500;
+        }
+    }
+    
+    .interactive-div:hover {
+        flex: 6;
+    }
+    
+    .interactive-div:not(:hover) {
+        flex: 1;
+    }
+    
+    
 }
