--- a/style/style.css
+++ b/style/style.css
@@ -303,4 +303,89 @@ header .header-content .btns-header button:last-child a {
 }
 .container-projetos .interactive-div:not(:hover) {
   flex: 1;
+}
+
+.contato {
+  font-family: "Josefin Sans", sans-serif;
+  background: url("../assets/bg-contato.png") no-repeat;
+  background-size: cover;
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.contato .map {
+  height: 100%;
+  width: 55%;
+}
+.contato .map iframe {
+  height: 100%;
+  width: 100%;
+}
+.contato .form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contato .form h2 {
+  color: white;
+  font-size: 42px;
+  padding-top: 10%;
+  margin-bottom: 2%;
+  font-weight: 500;
+}
+.contato .form h2 span {
+  color: #F0C7C2;
+}
+.contato .form .same-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.contato .form .same-line input {
+  width: 285px;
+}
+.contato .form .same-line input:last-child {
+  margin-left: 2%;
+}
+.contato .form input, .contato .form textarea {
+  background-color: black;
+  border: 1px solid white;
+  width: 60%;
+  height: 45px;
+  margin-bottom: 3%;
+}
+.contato .form input p, .contato .form textarea p {
+  color: white;
+}
+.contato .form textarea {
+  height: 20vh;
+}
+.contato .form button {
+  width: 60%;
+  height: 45px;
+  border: 3px solid #F0C7C2;
+  background-color: transparent;
+  font-size: 18px;
+  font-weight: bold;
+  color: #F0C7C2;
+}
+
+footer {
+  background-color: #120B0B;
+  height: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+footer p {
+  color: white;
+  font-size: 12px;
+  font-family: "Josefin Sans", sans-serif;
 }/*# sourceMappingURL=style.css.map */
