--- a/style/style.scss
+++ b/style/style.scss
@@ -98,7 +98,6 @@ header{
         }
     }
 }
-
 //--------SOBRE-NOS--------
 .sobre-nos{
     background: url("../assets/Frame\ 1\ \(2\).png") no-repeat;
@@ -131,7 +130,6 @@ header{
         
     }
 }
-
 //--------NOS-ESCOLHER--------
 .nos-escolher{
     background: url("../assets/Frame\ 1\ \(3\).png") no-repeat;
@@ -271,4 +269,76 @@ header{
     }
     
     
+}
+//--------CONTATO--------
+.contato{
+    font-family: "Josefin Sans", sans-serif;
+    background: url("../assets/bg-contato.png") no-repeat;
+    background-size: cover;
+    @include heigWid(80%, 100%);
+    @include felxCenter(row, center, center);
+    .map{
+        @include heigWid(100%, 55%);
+        iframe{
+            @include heigWid(100%, 100%);
+        }
+    }
+    .form{
+        width: 50%;
+        @include felxCenter(column, center, center);
+        h2{
+            color: white;
+            font-size: 42px;
+            padding-top: 10%;
+            margin-bottom: 2%;
+            font-weight: 500;
+            span{
+                color: #F0C7C2;
+            }
+        }
+        .same-line{
+            @include felxCenter(row, center, center);
+            input{
+                width: 285px;
+            }
+            input:last-child{
+                margin-left: 2%;
+            }
+        }
+        input, textarea{
+            background-color: black;
+            border: 1px solid white;
+            width: 60%;
+            height: 45px;
+            margin-bottom: 3%;
+            p{
+                color: white;
+
+            }
+        }
+        textarea{
+            height: 20vh;
+        }
+
+        button{
+            width: 60%;
+            height: 45px;
+            border: 3px solid #F0C7C2;
+            background-color: transparent;
+            font-size: 18px;
+            font-weight: bold;
+            color: #F0C7C2;
+        }
+    }
+}
+//--------FOOTER--------
+footer{
+    background-color: #120B0B;
+    height: 5%;
+    @include felxCenter(row, center, center);
+    p{
+        color: white;
+        font-size: 12px;
+        font-family: "Josefin Sans", sans-serif;
+    }
 }
