--- a/style/style.scss
+++ b/style/style.scss
@@ -11,7 +11,7 @@ body{
 }
 //--------MENU--------
 nav{
-    @include felxCenter(row, center, baseline);
+    @include flexCenter(row, center, baseline);
     @include heigWid(100px, 100%);
     background-color: transparent;
     z-index: 2;
@@ -21,15 +21,14 @@ nav{
         width: 130px;
     }
     ul{
+        @include flexCenter(row, center, center);
         width: 30%;
-        @include felxCenter(row, center, center);
-        margin-left: 62%;
+        margin-left: 60%;
         li{
             white-space: nowrap;
             margin-left: 38px;
             a{
-                font-size: 13px;
-                font-family: "Josefin Sans", sans-serif;
+                @include textEdit(white, 13px, 600);
             }
         }
         li:first-child{
@@ -52,19 +51,18 @@ header{
     background: url("../assets/header-image.png") no-repeat;
     background-size: cover;
     @include heigWid(100vh, 100%);
-    @include felxCenter(column, baseline, center);
+    @include flexCenter(column, baseline, center);
     .header-content{
         background-color: #120b0b72;
         @include heigWid(100vh, 40%);
-        @include felxCenter(column, center, center);
+        @include flexCenter(column, center, center);
         color: white;
         font-family: "Josefin Sans", sans-serif;
         h1{
-            margin-top: 10%;
-            font-size: 80px;
+            @include textEdit(white, 80px, 500);
             width: 50vw;
+            margin-top: 10%;
             margin-left: 92%;
-            font-weight: 500;
             margin-bottom: 2%;
         }
         p{
@@ -74,15 +72,13 @@ header{
         }
         .btns-header{
             margin-top: 25%;
-            width: 70%;
             margin-left: 26%;
+            width: 70%;
             button{
-                width: 250px;
-                height: 70px;
+                @include heigWid(220%, 40%);
+                @include textEdit(#3C3C3C, 24px, 700);
                 border: none;
                 background-color: #F0C7C2;
-                font-size: 24px;
-                font-weight: bold;
                 margin-left: 2%;
                 a{
                     color: #3C3C3C;
@@ -103,31 +99,24 @@ header{
     background: url("../assets/Frame\ 1\ \(2\).png") no-repeat;
     background-size: cover;
     @include heigWid(80%, 100%);
-    @include felxCenter(column, center, center);
+    @include flexCenter(column, center, center);
     h2{
-        color: white;
-        font-size: 56px;
-        font-family: "Josefin Sans", sans-serif;
-        font-weight: 600;
+        @include textEdit(white, 56px, 600);
         margin-bottom: 2%;
         span{
             color: #F0C7C2;
         }
     }
     .sobre-nos-content{
-        @include felxCenter(row, center, center);
+        @include flexCenter(row, center, center);
         @include heigWid(60%, 70%);
-        color: white;
-        font-family: "Josefin Sans", sans-serif;
-        font-size: 22px;
+        @include textEdit(white, 22px, 500);
         .sobre-text{
             width: 60%;
             p{
-                margin-right: 6%;
-                margin-top: 2.5%;
+                margin: 2.5%, 6%, 0, 0;
             }
-        }
-        
+        } 
     }
 }
 //--------NOS-ESCOLHER--------
@@ -135,7 +124,7 @@ header{
     background: url("../assets/Frame\ 1\ \(3\).png") no-repeat;
     background-size: cover;
     @include heigWid(80%, 100%);
-    @include felxCenter(row, center, center);
+    @include flexCenter(row, center, center);
     .video-nos-escolher{
         width: 50%;
         img{
@@ -145,13 +134,10 @@ header{
     }
     .nos-escolher-content{
         width: 50%;
-        @include felxCenter(column, center, center);
+        @include flexCenter(column, center, center);
         margin-right: 5%;
         h2{
-            color: white;
-            font-size: 64px;
-            font-family: "Josefin Sans", sans-serif;
-            font-weight: 600;
+            @include textEdit(white, 64px, 600);
             margin-bottom: 2%;
             span{
                 color: #F0C7C2;
@@ -162,8 +148,7 @@ header{
         width: 60%;
         position: relative;
         overflow: hidden;
-        margin-right: 5%;
-        margin-top: 5%;
+        margin: 5%, 5%, 0, 0;
         .carousel {
             display: flex;
             transition: transform 0.5s ease-in-out;
@@ -174,11 +159,11 @@ header{
             box-sizing: border-box;
             padding: 20px;
             text-align: center;
-            @include felxCenter(column, center, center);
+            @include flexCenter(column, center, center);
             .icon{
               border: 3px solid #F0C7C2;
               text-align: center;
-              @include felxCenter(column, center, center);
+              @include flexCenter(column, center, center);
               @include heigWid(80px, 80px);
               border-radius: 50%;
               font-size: 32px;
@@ -206,9 +191,8 @@ header{
             cursor: pointer;
             border: 3px solid #F0C7C2;
             background-color: transparent;
-            color: #F0C7C2;
+            @include textEdit(#F0C7C2, 18px, 900);
             @include heigWid(30px, 30px);
-            font-weight: 900;
             border-radius: 50%;
         }
         .prev:hover, .next:hover {
@@ -218,7 +202,6 @@ header{
         .prev {
             left: 5%;
         }
-        
         .next {
             right: 5%;
         }
@@ -227,10 +210,8 @@ header{
 //--------PROJETOS--------
 .container-projetos{
     display: flex;
-    width: 100%;
-    height: 80vh;
+    @include heigWid(80vh, 100%);
     overflow: hidden;
-    
     .interactive-div {
         flex: 1;
         background-size: cover;
@@ -244,31 +225,22 @@ header{
             left: 10px;
             color: white;
             text-shadow: 1px 1px 2px black;
-            @include felxCenter(row, center, center)
+            @include flexCenter(row, center, center)
         }
-        
         img {
-            width: 100px;
-            height: 100px;
+            @include heigWid(100px, 100px);
             opacity: 0.5;
         }
         h3{
-            color: #F0C7C2;
-            font-size: 36px;
-            font-family: "Josefin Sans", sans-serif;
-            font-weight: 500;
+            @include textEdit(#F0C7C2, 36px, 500);
         }
     }
-    
     .interactive-div:hover {
         flex: 6;
     }
-    
     .interactive-div:not(:hover) {
         flex: 1;
     }
-    
-    
 }
 //--------CONTATO--------
 .contato{
@@ -276,7 +248,7 @@ header{
     background: url("../assets/bg-contato.png") no-repeat;
     background-size: cover;
     @include heigWid(80%, 100%);
-    @include felxCenter(row, center, center);
+    @include flexCenter(row, center, center);
     .map{
         @include heigWid(100%, 55%);
         iframe{
@@ -285,19 +257,17 @@ header{
     }
     .form{
         width: 50%;
-        @include felxCenter(column, center, center);
+        @include flexCenter(column, center, center);
         h2{
-            color: white;
-            font-size: 42px;
+            @include textEdit(white, 42px, 500);
             padding-top: 10%;
             margin-bottom: 2%;
-            font-weight: 500;
             span{
                 color: #F0C7C2;
             }
         }
         .same-line{
-            @include felxCenter(row, center, center);
+            @include flexCenter(row, center, center);
             input{
                 width: 285px;
             }
@@ -308,26 +278,20 @@ header{
         input, textarea{
             background-color: black;
             border: 1px solid white;
-            width: 60%;
-            height: 45px;
+            @include heigWid(45px, 60%);
             margin-bottom: 3%;
             p{
                 color: white;
-
             }
         }
         textarea{
             height: 20vh;
         }
-
         button{
-            width: 60%;
-            height: 45px;
+            @include heigWid(45px, 60%);
             border: 3px solid #F0C7C2;
             background-color: transparent;
-            font-size: 18px;
-            font-weight: bold;
-            color: #F0C7C2;
+            @include textEdit(#F0C7C2, 18px, 600);
         }
     }
 }
@@ -335,10 +299,84 @@ header{
 footer{
     background-color: #120B0B;
     height: 5%;
-    @include felxCenter(row, center, center);
+    @include flexCenter(row, center, center);
     p{
-        color: white;
-        font-size: 12px;
-        font-family: "Josefin Sans", sans-serif;
+        @include textEdit(white, 12px, 500);
     }
+}
+
+//Responsividade
+
+@media (max-width: 866px) {
+    nav {
+        img {
+            margin-left: 20px;
+        }
+        .menu-icon {
+            display: flex;
+            margin-left: 70%;
+            @include textEdit(white, 32px, 600)
+        }
+        ul {
+            display: none;
+        }
+    }
+    header{
+        .header-content{
+            h1{
+                font-size: 40px;
+            }
+        }
+    }
+}
+@media (min-width: 866px) {
+    nav {
+        .menu-icon {
+            display: none;
+
+        }
+    }
+}
+@media (max-width: 1600px) {
+    nav{
+        ul{
+            margin-left: 55%;
+        }
+    }
+}
+@media (max-width: 1440px) {
+    nav{
+        ul{
+            margin-left: 50%;
+        }
+    }
+}
+@media (max-width: 1200px) {
+    nav{
+        ul{
+            margin-left: 45%;
+        }
+    }
+}
+@media (max-width: 1024px) {
+    nav{
+        ul{
+            margin-left: 40%;
+        }
+    }
+    header{
+        .header-content{
+            h1{
+                font-size: 70px;
+            }
+            p{
+                font-size: 20px;
+            }
+        }
+        .btns-header{
+            display: none;
+        }
+    }
+
+    
 }
